# pypi-sample

./: pyproject.toml
tests/: test_m3y_pypi_sample.py
